# TCRtrie

./: CMakeLists.txt  MANIFEST.in  README.md  VDJdb.txt  blosum.txt  pyproject.toml
include/: AirrParser.h  Trie.h  TrieInterface.h
include/.ipynb_checkpoints/: Trie-checkpoint.h
src/: AirrParser.cpp  Trie.cpp  TrieInterface.cpp  main.cpp
src/.ipynb_checkpoints/: Trie-checkpoint.cpp  main-checkpoint.cpp
tcrtrie/: __init__.py  bindings.cpp
tcrtrie_/: __init__.py  bindings.cpp
