[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tcrtrie"
version = "0.1.0"
description = "Python bindings for TCR trie search"
requires-python = ">=3.8"

[tool.scikit-build]
wheel.packages = ["tcrtrie"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tcrtrie" = ["vdjdb_airr.tsv"]